--- a/force-app/main/default/aura/validationTicket/validationTicket.cmp
+++ b/force-app/main/default/aura/validationTicket/validationTicket.cmp
@@ -1,3 +1,3 @@
-<aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId,force:lightningQuickAction">
+<aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:lightningQuickAction">
     <c:ticketValidation></c:ticketValidation>
 </aura:component>	
